<resources>
    <string name="app_name">Inventory App</string>

    <string name="hint_product_name">Product name</string>
    <string name="hint_price">Price</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_supplier_name">Supplier Name</string>
    <string name="hint_supplier_phone">Supplier Phone Number</string>

    <string name="increase">+</string>
    <string name="decrease">-</string>

    <string name="orderButton">Order</string>

    <string name="empty_view_title_text">No books yet</string>
    <string name="empty_view_subtitle_text">Get started by adding some</string>
    <string name="add_button">Add book</string>

    <string name="sale_button">Sale</string>
    <string name="save_button">Save</string>
    <string name="delete_menu">Delete</string>
    <string name="delete_books">Delete all books</string>

    <string name="delete_all_msg">Delete all books?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="decrease_toast">Quantity must be 0 or more.</string>
    <string name="editor_activity_title_new_book">Add a Book</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>
    <string name="prompt_no_change">No changes have been made</string>
    <string name="prompt_missing">Missing data in fields</string>
    <string name="editor_insert_book_successful">Book saved</string>
    <string name="editor_insert_book_failed">Error with saving book</string>
    <string name="editor_update_book_successful">Book updated</string>
    <string name="editor_update_book_failed">Error with updating book</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this book?</string>


    <string name="editor_delete_book_successful">Book deleted</string>
    <string name="editor_delete_book_failed">Error with deleting book</string>
    <string name="no_quantity">No books left!</string>
</resources>

